# SendIt

./: .gitignore
LSIT/1/: CMakeLists.txt  CMakePresets.json  Lexing.md  runapp.sh  runtests.sh
LSIT/1/include/: Lexer.h  main.h
LSIT/1/include/Lexer/: Lexer.h  States.h  Token.h
LSIT/1/include/Parser/: AstNode.h  Parser.h
LSIT/1/include/Tests/: common.h
LSIT/1/include/Token/: States.h  Token.h
LSIT/1/src/: Lexer.cpp  main.cpp
LSIT/1/src/Lexer/: Lexer.cpp  States.cpp
LSIT/1/src/Parser/: AstNode.cpp  Spec.md
LSIT/1/tests/: LexerTests.cpp  ParserTest.cpp  common.cpp  main.cpp
lang/: CMakeLists.txt  vcpkg.json
lang/include/Lexer/: States.h  Token.h
lang/include/Parser/: AstNode.h
lang/include/TestHelp/: common.h
lang/src/: main.cpp
lang/src/Lexer/: Lexer.cpp  States.cpp
lang/src/Parser/: AstNode.cpp  Parser.md  Parser2.md  Spec.md
lang/tests/: LexerTests.cpp  ParserTest.cpp  common.cpp
